--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <title>AdminLTE 3</title>
+        <title>BORN - NOKIA</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
