--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
             name="description"
             content="Web site created using create-react-app"
         />
+        <meta http-equiv='cache-control' content='no-cache'>
+        <meta http-equiv='expires' content='0'>
+        <meta http-equiv='pragma' content='no-cache'>
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/>
